--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -8,6 +8,7 @@
     
     
     <h1 id="x1"style="background: yellow; color:black;">The Flinstones</h1>
+      <img src="starwars.html/ALL Charectors.JPG">
     <p id="x1p">Meet the Flintstones<br>
     They're the modern stone age family<br>
     From the town of Bedrock<br>
