--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>starwars</title>
     </head>
-    <style>
-    body{background:black; overflow:auto;}
+    <body>
+        <style>
+        body{background:black; overflow:auto;}
 
 a:hover{background-color:yellow;}
 a:active{background-color:yellow;}
@@ -32,18 +33,17 @@ top:70px; left:35px}
 #logo{position:relative;
 top:5px; left:250px; z-index:1;}
 #ball{position:relative;
-top:708px; left:300px;}
+top:708px; left:464px; z-index:2;}
 #yoda{position:relative;
-top:100px; left:70px; z-index:2;}
+top:100px; left:70px; z-index:3;}
 #solo{position:relative;
-top:1600px; left:34px; z-index:3;}
-#bb8{position:relative;
-top:1950px; right:803px;}
+top:1600px; left:34px; z-index:4;}
 #Lucas{position:relative;
-top:910px; left:50px; z-index:4;}
-    </style>
+top:910px; left:50px; z-index:5;}
+#bb8{position:relative;
+top:1950px; right:803px; z-index:6;}
+        </style>
 
-    <body>
     
       <img src="https://i.postimg.cc/hPsCFQz5/starwars-title.jpg" 
          width="500" id="logo">
@@ -92,6 +92,16 @@ like: Yoda, Chewbacca, BB-8, Han Solo, Luke Skywalker
                       font-size:30px">all the movies</h5>
   
     <p id="x1p"style="background: white; color:black; font-family:monospace;">1: Star Wars: Episode IV - A New Hope<br>2: The Empire Strikes Back<br>3: Return of the Jedi<br>4: Star Wars: Episode I – The Phantom Menace<br>5: Star Wars: Episode II – Attack of the Clones<br>6: Star Wars: Revenge of the Sith (Episode III)<br>7: Star Wars: The Force Awakens<br>8: Star Wars: The Last Jedi<br>9: Star Wars: The Rise of Skywalker.</p><br><br><br>
+      
+       <!--navigation list-->
+      <a href="#x1"><h1 id="navigation1" style="color:white; font-family:monospace; 
+         font-size:16px">the beginning</h1></a>
+      <a href="#x2"><h2 id="navigation2" style="color:white; font-family:monospace; 
+        font-size:16px">about the creator</h2></a>
+      <a href="#x3"><h3 id="navigation3" style="color:white; font-family:monospace; 
+        font-size:16px">the star wars characters</h3></a>
+      <a href="#x3"><h4 id="navigation4" style="color:white; font-family:monospace; 
+        font-size:16px">list of all star wars movies</h4></a><br><br>
 
     </body>
 </html>
