--- a/index.html
+++ b/index.html
@@ -125,6 +125,5 @@ like: Yoda, Chewbacca, BB-8, Han Solo, Luke Skywalker
         font-size:18px">about the creator</h2></a>
       <a href="#x3"><h3 id="navigation3" style="color:yellow; font-family:monospace; 
         font-size:18px">the star wars characters</h3></a>
-      <br><br><br>
-  </body>
+<p style="background: black; color:grey; font-family:monospace; font-size:12px; padding:80px;">       .  .  .  .  .  .  .  .  .  .  .  .   .  .  .  .  .  .  .  .  .  .  .  .  © 2020 socrates ray naem. all rights reserved for a love of starwars</p><br><br>  </body>
 </html>
